try packing with jlink / jpackage beryx.jlink