@@ -1,6 +1,7 @@
 plugins {
     alias(libs.plugins.kotlin.jvm)
     application
+    id("org.beryx.jlink") version "3.1.1"
 }
 
 repositories {
@@ -15,7 +16,7 @@ dependencies {
     implementation("org.kodein.di:kodein-di:7.22.0")
     implementation("de.swiesend:secret-service:2.0.1-alpha")
     implementation("ch.qos.logback:logback-classic:1.5.15")
-    implementation("org.gitlab4j:gitlab4j-api:6.0.0-rc.8")
+    // implementation("org.gitlab4j:gitlab4j-api:6.0.0-rc.8")
     implementation("org.xerial:sqlite-jdbc:3.47.2.0")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1")
     testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
@@ -34,7 +35,9 @@ java {
 
 application {
     mainClass = "fr.arsenelapostolet.professor.AppKt"
+    mainModule = "fr.arsenelapostolet.professor"
 }
+
 
 tasks.named<Test>("test") {
     useJUnitPlatform()
@@ -45,5 +48,30 @@ tasks.register<Test>("testCi") {
     filter {
         excludeTestsMatching("fr.arsenelapostolet.professor.core.services.FreeDesktopSecretServiceTests")
     }
+}
 
+jlink {
+    addOptions(
+        "--strip-debug",
+        "--no-header-files",
+        "--no-man-pages",
+        "--verbose"
+    )
+    launcher {
+        name = "Professor"
+    }
+    jpackage {
+        vendor = "Arsène Lapostolet"
+        jvmArgs.addAll(
+            listOf(
+                "--enable-native-access=org.gnome.gtk",
+                "--enable-native-access=org.gnome.glib",
+                "--enable-native-access=org.gnome.gobject",
+                "--enable-native-access=org.gnome.gio",
+                "--enable-native-access=org.gnome.adw"
+            )
+        )
+        installerType = "rpm"
+    }
+    forceMerge("kotlin")
 }
